# a-star-implement

./: README.md  app.py  notebook.ipynb  pyproject.toml
static/: script.js
templates/: index.html
